[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cosmoplotlib"
description = "Useful Python plotting library for cosmology"
authors = [
    {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"},
    {name = "Guadalupe Canas-Herrera", email = "guadalupe.canasherrera@esa.int"},
]
readme = "README.md"
maintainers = [
    {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"},
    {name = "Guadalupe Canas-Herrera", email = "guadalupe.canasherrera@esa.int"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
Repository = "https://github.com/astro-ph/cosmoplotlib"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "cosmoplotlib/_version.py"
